k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auditlog
  labels:
    app.kubernetes.io/part-of: audit-log-service
